--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "html2canvas": "^1.0.0-rc.7",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
