--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Monaly",
+  "name": "Monaly",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "monaly_favicon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
@@ -20,6 +20,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#ef476f",
+  "background_color": "#ffffff",
+  "description": "Monaly allows creatives stay connected and gives limitless access to a global audience."
 }
