--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html2canvas": "^1.0.0-rc.7",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mailgen": "^2.0.14",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
