--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
+    "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
