--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^1.5.0",
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.14.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "flutterwave-react-v3": "^1.0.9",
     "html2canvas": "^1.0.0-rc.7",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -21,6 +24,7 @@
     "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
