--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mailgen": "^2.0.14",
+    "moment": "^2.29.1",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-excel-workbook": "0.0.4",
     "react-paypal-button-v2": "^2.6.3",
+    "react-paystack": "^3.0.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
