--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "monaly-frontend",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
@@ -9,13 +12,16 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^1.5.0",
+    "@south-paw/react-vector-maps": "^3.1.0",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.14.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apexcharts": "^3.27.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.2.1",
     "flutterwave-react-v3": "^1.0.9",
     "html2canvas": "^1.0.0-rc.7",
     "jsonwebtoken": "^8.5.1",
@@ -24,6 +30,8 @@
     "moment": "^2.29.1",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.9",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-excel-workbook": "0.0.4",
     "react-paypal-button-v2": "^2.6.3",
@@ -34,6 +42,7 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
+    "styled-components": "^5.3.0",
     "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
   },
