--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "mailgen": "^2.0.14",
     "moment": "^2.29.1",
+    "node-geocoder": "^3.27.0",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
@@ -39,6 +40,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-step-wizard": "^5.3.9",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
