--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-excel-workbook": "0.0.4",
+    "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-paystack": "^3.0.3",
     "react-redux": "^7.2.2",
