--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.29.1",
     "node-geocoder": "^3.27.0",
     "qrcode.react": "^1.0.1",
+    "query-string": "^7.0.1",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
     "react-chartjs-2": "^3.0.3",
