--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.17.2",
     "apexcharts": "^3.27.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
@@ -36,12 +37,14 @@
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-excel-workbook": "0.0.4",
+    "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-paystack": "^3.0.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-step-wizard": "^5.3.9",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
