--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
     "react-chartjs-2": "^3.0.3",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.1",
     "react-excel-workbook": "0.0.4",
     "react-ga": "^3.3.0",
