--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.17.2",
+    "antd-img-crop": "^4.0.2",
     "apexcharts": "^3.27.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
@@ -37,7 +38,9 @@
     "react-chartjs-2": "^3.0.3",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.1",
+    "react-email-editor": "^1.5.0",
     "react-excel-workbook": "0.0.4",
+    "react-froala-wysiwyg": "^4.0.8",
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
