--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "bootstrap": "^4.6.0",
     "chart.js": "^3.2.1",
     "flutterwave-react-v3": "^1.0.9",
+    "font-awesome": "^4.7.0",
+    "fuzzy-search": "^3.2.1",
     "html2canvas": "^1.0.0-rc.7",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mailgen": "^2.0.14",
     "moment": "^2.29.1",
     "node-geocoder": "^3.27.0",
+    "prepend-http": "^4.0.0",
     "qrcode.react": "^1.0.1",
     "query-string": "^7.0.1",
     "react": "^17.0.1",
